<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/drw_item"
            android:title="@string/recent_title" />

        <item
            android:id="@+id/nav_private"
            android:icon="@drawable/drw_item"
            android:title="@string/private_interiors_title" />

        <item
            android:id="@+id/nav_public"
            android:icon="@drawable/drw_item"
            android:title="@string/public_interiors_title" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/drw_item"
            android:title="@string/favorites_title" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/drw_item"
            android:title="@string/about_title" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/drw_item"
            android:title="@string/order_online" />

    </group>
</menu>